Test/p/force-app/main/default/objects/Company__c/fields/CompanyName__c.field-meta.xml
<CustomField>
    <fullName>CompanyName__c</fullName>
    <label>CompanyName</label>
    <length>15</length>
    <required>true</required>
    <type>Text</type>
</CustomField>