Test/p/force-app/main/default/objects/Company__c/fields/ContarctCount__c.field-meta.xml
<CustomField>
    <fullName>ContarctCount__c</fullName>
    <label>Contarct</label>
    <summaryForeignKey>Employee__c.Company__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>