Test/p/force-app/main/default/objects/Company__c/fields/experience__c.field-meta.xml
<CustomField>
    <fullName>experience__c</fullName>
    <label>experience</label>
    <summaryForeignKey>Employee__c.Company__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>