Test/p/force-app/main/default/objects/Company__c/fields/Organization_Depterments__c.field-meta.xml
<CustomField>
    <fullName>Organization_Depterments__c</fullName>
    <description>This describees the company depts</description>
    <inlineHelpText>This describees the company depts</inlineHelpText>
    <label>Organization Departments</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HR</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Services</fullName>
            </value>
            <value>
                <fullName>Business Leader</fullName>
            </value>
            <value>
                <fullName>Franchise Partners</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>