Test/p/force-app/main/default/objects/Company__c/fields/permenent_count__c.field-meta.xml
<CustomField>
    <fullName>permenent_count__c</fullName>
    <label>permenent count</label>
    <summaryFilterItems>
        <field>Employee__c.EmpType__c</field>
        <operation>equals</operation>
        <value>Permanent</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Employee__c.EmpType__c</field>
        <operation>equals</operation>
        <value>contract</value>
    </summaryFilterItems>
    <summaryForeignKey>Employee__c.Company__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>