Test/p/force-app/main/default/objects/Company__c/listViews/HR_Company.listView-meta.xml
<ListView>
    <fullName>HR_Company</fullName>
    <filterScope>Queue</filterScope>
    <label>HR</label>
    <queue>HR</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>