Test/p/force-app/main/default/objects/Company__c/listViews/Manager_Company.listView-meta.xml
<ListView>
    <fullName>Manager_Company</fullName>
    <filterScope>Queue</filterScope>
    <label>Manager</label>
    <queue>Manager</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>